syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/api/messages/dashboard";
package messages.dashboard;


message DashboardStatsResponse {
	string category_id = 1;
	string category_name = 2;
	uint32 viewers = 3;
	optional string started_at = 4;
	string title = 5;
	uint32 chat_messages = 6;
	uint32 followers = 7;
	uint32 used_emotes = 8;
	uint32 requested_songs = 9;
	uint32 subs = 10;
}

enum EventType {
	DONATION = 0;
	FOLLOW = 1;
	RAIDED = 2;
	SUBSCRIBE = 3;
	RESUBSCRIBE = 4;
	SUBGIFT = 5;
	FIRST_USER_MESSAGE = 6;
	CHAT_CLEAR = 7;
	REDEMPTION_CREATED = 8;
	CHANNEL_BAN = 9;
}

message EventData {
	string donation_amount = 1;
	string donation_currency = 2;
	string donation_message = 3;
	string donation_username = 4;

	//
	string raided_viewers_count = 5;
	string raided_from_user_name = 6;
	string raided_from_display_name = 7;

	//
	string follow_user_name = 8;
	string follow_user_display_name = 9;

	//
	string redemption_title = 10;
	string redemption_input = 11;
	string redemption_user_name = 12;
	string redemption_user_display_name = 13;
	string redemption_cost = 14;

	//
	string sub_level = 15;
	string sub_user_name = 16;
	string sub_user_display_name = 17;

	//
	string re_sub_level = 18;
	string re_sub_user_name = 19;
	string re_sub_user_display_name = 20;
	string re_sub_months = 21;
	string re_sub_streak = 22;
	//
	string sub_gift_level = 23;
	string sub_gift_user_name = 24;
	string sub_gift_user_display_name = 25;
	string sub_gift_target_user_name = 26;
	string sub_gift_target_user_display_name = 27;

	//
	string first_user_message_user_name = 28;
	string first_user_message_user_display_name = 29;
	string first_user_message_message = 30;

	string ban_reason = 31;
	string ban_ends_in_minutes = 32;
	string banned_user_name = 33;
	string banned_user_login = 34;

	string moderator_name = 35;
	string moderator_display_name = 36;
}

message DashboardEventsList {
	message Event {
		string user_id = 1;
		EventType type = 2;
		EventData data = 3;
		string created_at = 4;
	}
	repeated Event events = 1;
}
