syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/api/messages/modules_tts";
package messages.modules_tts;

import "google/protobuf/any.proto";

message Settings {
	bool enabled = 1;
	uint32 rate = 2;
	uint32 volume = 3;
	uint32 pitch = 4;
	string voice = 5;
	bool allow_users_choose_voice_in_main_command = 6;
	uint32 max_symbols = 7;
	repeated string disallowed_voices = 8;
	bool do_not_read_emoji = 9;
	bool do_not_read_twitch_emotes = 10;
	bool do_not_read_links = 11;
	bool read_chat_messages = 12;
	bool read_chat_messages_nicknames = 13;
}

message GetResponse {
	Settings data = 1;
}

message PostRequest {
	Settings data = 1;
}

message GetInfoResponse {
	message VoiceInfo {
		string country = 1;
		string gender = 2;
		string lang = 3;
		string name = 4;
		int64 no = 5;
	}

	message Formats {
		string flac = 1;
		string mp3 = 2;
		string opus = 3;
		string wav = 4;
	}

	string default_format = 1;
	string default_voice = 2;
	Formats formats = 3;
	repeated string supported_voices = 4;
	map<string, VoiceInfo> voices_info = 5;
}

message SayRequest {
	uint32 volume = 1;
	uint32 pitch = 2;
	uint32 rate = 3;
	string text = 4;
	string voice = 5;
}

message SayResponse {
	bytes file = 1;
}

message GetUsersSettingsResponse {
	message UserSettings {
		string user_id = 1;
		uint32 rate = 2;
		uint32 volume = 3;
		uint32 pitch = 4;
		string voice = 5;
	}

	repeated UserSettings data = 1;
}

message UsersDeleteRequest {
	repeated string usersIds = 1;
}
